# mc-proxy

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.json
.github/workflows/: rust.yml
migrations/: 0001_add_key_value.down.sql  0001_add_key_value.up.sql  0002_add_bans.down.sql  0002_add_bans.up.sql  0003_add_whitelist.down.sql  0003_add_whitelist.up.sql
minecraft-protocol/: Cargo.toml  README.md
minecraft-protocol-derive/: Cargo.toml  README.md
minecraft-protocol-derive/src/render/: decoder.rs  encoder.rs
minecraft-protocol/src/: decoder.rs  encoder.rs  error.rs  lib.rs  tokio.rs
minecraft-protocol/src/codec/: client.rs  codec.rs  mod.rs  server.rs
minecraft-protocol/src/data/: chat.rs  server_status.rs
minecraft-protocol/src/nbt/: decode.rs  encode.rs  mod.rs
minecraft-protocol/src/packet/: configuration.rs  game.rs  handshake.rs  login.rs  mod.rs  status.rs
src/: config.rs  errors.rs  main.rs  server.rs  state.rs
src/commands/: handler.rs  mod.rs  server.rs
src/handler/: handshake.rs  login.rs  mod.rs  proxy.rs  status.rs
src/repository/: ip_bans.rs  kv.rs  mod.rs  user_bans.rs  whitelist.rs
src/utils/: config.rs  env.rs  mod.rs  service.rs
