[workspace]
resolver = "2"
members = [".", "minecraft-protocol", "minecraft-protocol-derive"]

[workspace.dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "io-util",
    "net",
    "time",
    "macros",
    "sync",
    "signal",
] }

thiserror = "1.0"

bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }

[profile.release]
panic = "unwind"
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
panic = "unwind"

[package]
name = "mc-proxy"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

description = "Minecraft proxy server"

[dependencies]
