[workspace]
resolver = "2"
members = [".", "minecraft-protocol", "minecraft-protocol-derive"]

[workspace.dependencies]
minecraft-protocol = { path = "./minecraft-protocol" }

tokio = { version = "1", features = [
    "rt-multi-thread",
    "io-util",
    "net",
    "time",
    "macros",
    "sync",
    "signal",
] }

thiserror = "1.0"

bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }

[profile.release]
panic = "unwind"
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
panic = "unwind"

[package]
name = "mc-proxy"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

description = "Minecraft proxy server"

[features]
full = ["dotenv", "json-log"]
dotenv = ["dep:dotenvy"]
json-log = ["tracing-subscriber/json"]

[dependencies]
minecraft-protocol = { workspace = true, features = ["tokio"] }

tokio.workspace = true
futures-util = "0.3"

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "chrono",
    "sqlite",
    "migrate",
] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid.workspace = true
serde_json.workspace = true
serde.workspace = true
chrono = { version = "0.4", features = ["serde"] }

thiserror.workspace = true
dotenvy = { version = "0.15", optional = true }

[dev-dependencies]
rand = "0.8"
