[package]
name = "minecraft-protocol-derive"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

description = "Derive macro for reading and writing Minecraft packets"
authors = ["Izan Rodrigues <izanrodrigues999@gmail.com>"]
readme = "./README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
